--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,6 +1,6 @@
 name: PR Check
 
-on: [pull_request]
+on: [push]
 
 # When a new revision is pushed to a PR, cancel all in-progress CI runs for that
 # PR. See https://docs.github.com/en/actions/using-jobs/using-concurrency
@@ -83,92 +83,7 @@ jobs:
           name: binaries
           path: _release
 
-  go-test:
-    name: Go Test (${{ matrix.os }})
-    runs-on: ${{ matrix.run }}
-    needs: generate
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - os: linux
-            run: ubuntu-22.04
-          - os: darwin
-            run: macos-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - id: go_version
-        name: Read go version
-        run: echo "go_version=$(cat .go-version)" >> $GITHUB_OUTPUT
-
-      - name: Install Go (${{ steps.go_version.outputs.go_version }})
-        uses: actions/setup-go@v3
-        with:
-          go-version: ${{ steps.go_version.outputs.go_version }}
-
-      - name: Download generated artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: generated
-
-      - name: Unit Test Golang
-        run: make test-coverage
-        timeout-minutes: 30
-
-  go-lint:
-    name: Go Lint
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Golang Style and Lint Check
-        run: make check
-        timeout-minutes: 30
-
-  wasm:
-    name: WASM
-    runs-on: ubuntu-22.04
-    needs: generate
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Check PR for changes to Wasm
-        uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            wasm:
-              - Makefile
-              - 'wasm/**'
-              - 'ast/**'
-              - 'internal/compiler/**'
-              - 'internal/planner/**'
-              - 'internal/wasm/**'
-              - 'test/wasm/**'
-              - 'test/cases/**'
-
-      - name: Download generated artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: generated
-        if: steps.changes.outputs.wasm == 'true'
-
-      - name: Build and Test Wasm
-        run: make ci-wasm
-        timeout-minutes: 15
-        if: steps.changes.outputs.wasm == 'true'
-
-      - name: Build and Test Wasm SDK
-        run: make ci-go-wasm-sdk-e2e-test
-        timeout-minutes: 30
-        if: steps.changes.outputs.wasm == 'true'
-        env:
-          DOCKER_RUNNING: 0
-
+ 
   check-generated:
     name: Check Generated
     runs-on: ubuntu-22.04
@@ -187,51 +102,6 @@ jobs:
         timeout-minutes: 15
         env:
           DOCKER_RUNNING: 0
-
-  race-detector:
-    name: Go Race Detector
-    runs-on: ubuntu-22.04
-    needs: generate
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Download generated artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: generated
-
-      - name: Test with Race Detector
-        run: make ci-go-race-detector
-        env:
-          DOCKER_RUNNING: 0
-
-  smoke-test-docker-images:
-    name: docker image smoke test
-    runs-on: ubuntu-22.04
-    needs: go-build
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: arm64
-
-      - name: Download release binaries
-        uses: actions/download-artifact@v3
-        with:
-          name: binaries
-          path: _release
-
-      - name: Test amd64 images
-        run: make ci-image-smoke-test
-
-      - name: Test arm64 images
-        run: make ci-image-smoke-test
-        env:
-          GOARCH: arm64
 
   smoke-test-binaries:
     runs-on: ${{ matrix.os }}
@@ -291,35 +161,3 @@ jobs:
         env:
           DOCKER_RUNNING: 0
 
-
-  # Run PR metadata against Rego policies
-  rego-check-pr:
-    name: Rego PR checks
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Download OPA
-        uses: open-policy-agent/setup-opa@v2
-        with:
-          version: edge
-
-      - name: Test policies
-        run: opa test build/policy
-
-      - name: Ensure proper formatting
-        run: opa fmt --list --fail build/policy
-
-      - name: Run policy checks on changed files
-        run: |
-          curl --silent --fail --header 'Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' -o files.json \
-            https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files
-          opa eval --bundle build/policy/ --format values --input files.json \
-            --fail-defined 'data.files.deny[message]'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Show input on failure
-        run: opa eval --input files.json --format pretty input
-        if: ${{ failure() }}
